# crux-submodule-app

./: Cargo.toml  README.md  rust-toolchain.toml
iOS/iOS/: ContentView.swift  iOSApp.swift
iOS/iOS.xcodeproj/: project.pbxproj
iOS/iOS.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
iOS/iOS.xcodeproj/xcshareddata/xcschemes/: iOS Dev.xcscheme  iOS.xcscheme
iOS/iOS.xcodeproj/xcuserdata/romerorickyio.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/iOS/Assets.xcassets/AccentColor.colorset/: Contents.json
iOS/iOS/Assets.xcassets/dalle.imageset/: Contents.json
iOS/iOS/Components/: CircleImage.swift  ProfileImage.swift
iOS/iOS/Home/: HomeView.swift
iOS/iOS/Model/: Model.swift
iOS/iOS/Profile/: ProfileView.swift
iOS/iOS/Views/: Templete.swift
iOS/iOS/Views/Chat/: ChatListRow.swift  ChatListView.swift  ChatRoomView.swift
iOS/iOS/Views/Home/: HomeView.swift
iOS/iOS/Views/Profile/: ProfileView.swift
iOS/iOSTests/: iOSTests.swift
iOS/iOSUITests/: iOSUITests.swift  iOSUITestsLaunchTests.swift
shared/: Cargo.toml  uniffi.toml
shared/shared.xcodeproj/: project.pbxproj
shared/shared.xcodeproj/xcuserdata/romerorickyio.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: app.rs  lib.rs
shared_types/: Cargo.toml  build.rs
